--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^4.5.0",
     "vant": "^2.2.16",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
