--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "dingtalk-jsapi": "^2.8.33",
     "echarts": "^4.5.0",
+    "node-dd": "^0.3.0-es3.201706091018",
     "vant": "^2.2.16",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
