--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "echarts": "^4.5.0",
     "mescroll.js": "^1.4.1",
     "vant": "^2.2.16",
+    "video.js": "^7.6.6",
     "vue": "^2.5.2",
     "vue-cute-timeline": "^1.2.8",
     "vue-light-timeline": "^1.0.3",
