--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dingtalk-jsapi": "^2.8.33",
     "echarts": "^4.5.0",
     "mescroll.js": "^1.4.1",
+    "react-html5video": "^2.5.1",
     "vant": "^2.2.16",
     "video.js": "^7.6.6",
     "vue": "^2.5.2",
