--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vant": "^2.2.16",
     "video.js": "^7.6.6",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.10",
     "vue-cute-timeline": "^1.2.8",
     "vue-light-timeline": "^1.0.3",
     "vue-router": "^3.0.1",
