--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.19.0",
     "dingtalk-jsapi": "^2.8.33",
     "echarts": "^4.5.0",
+    "eruda": "^2.0.1",
     "mescroll.js": "^1.4.1",
     "react-html5video": "^2.5.1",
     "vant": "^2.2.16",
+    "vconsole": "^3.3.4",
     "video.js": "^7.6.6",
     "vue": "^2.5.2",
     "vue-amap": "^0.5.10",
