--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
     "dingtalk-jsapi": "^2.8.33",
     "echarts": "^4.5.0",
     "eruda": "^2.0.1",
     "mescroll.js": "^1.4.1",
+    "postcss-pxtorem": "^4.0.1",
     "react-html5video": "^2.5.1",
     "vant": "^2.2.16",
     "vconsole": "^3.3.4",
