--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "dingtalk-jsapi": "^2.8.33",
     "echarts": "^4.5.0",
     "eruda": "^2.0.1",
+    "iscroll": "^5.2.0",
     "js-audio-recorder": "^1.0.1",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "mescroll.js": "^1.4.1",
     "postcss-pxtorem": "^4.0.1",
     "react-html5video": "^2.5.1",
